adding vendor files

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   <!-- Custom fonts for this theme -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
@@ -193,18 +195,21 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-6 ml-auto">
+          <h4>Experience</h4>
           <p class="lead">I have 7 years of experience in UI Development which includes Developing Responsive Web Applications as per the spec provided  by client or product team. Having expertise skills in HTML5, CSS3, Bootstrap, JavaScript, Angular, React and 15 years of UI Designer experience.</p>
+          <p class="lead">Effective Communication with others like Technical & Project stakeholders / Clients.</p>
           <p class="lead">Looking for a challenging role in the areas of Front-end Development where I can utilize my experience while enhancing my skills & knowledge.</p>
+          
         </div>
         <div class="col-lg-6 mr-auto">
           <h4>Technical Skills</h4>
           <ul>
-            <li>Web & Mobile Development – HTML5, CSS3, JavaScript, React.</li>
-            <li>Front-end component library – Bootstrap 3 or 4 and CSS preprocessor SASS</li>
-            <li>Responsive User Interface Development which supports Multi Device and Cross Browser Compatibility.</li>
-            <li>Well versed in programming concepts and strong Debugging skills.</li>
-            <li>In-detail understanding and experience in knowing the scope of the projects and managing the deliverables on time.</li>
-            <li>Effective Communication with others like Technical & Project stakeholders / Clients.</li>
+            <li class="lead">Web & Mobile Development – HTML5, CSS3, JavaScript, React.</li>
+            <li class="lead">Front-end component library – Bootstrap 3 or 4 and CSS preprocessor SASS</li>
+            <li class="lead">Responsive User Interface Development which supports Multi Device and Cross Browser Compatibility.</li>
+            <li class="lead">Well versed in programming concepts and strong Debugging skills.</li>
+            <li class="lead">In-detail understanding and experience in knowing the scope of the projects and managing the deliverables on time.</li>
+            <li class="lead">Effective Communication with others like Technical & Project stakeholders / Clients.</li>
           </ul>
         </div>
         </div>
