--- a/index.html
+++ b/index.html
@@ -245,8 +245,11 @@
       <!-- Contact Section Form -->
       <div class="row">
         <div class="col-lg-8 mx-auto">
+          <div style="width: max-content;" class="mx-auto">
+            <h5><a href="mailto:ravi.chanti@gmail.com" class="mx-auto">ravi.chanti@gmail.com</a></h5>
+          </div>
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate">
+          <!-- <form name="sentMessage" id="contactForm" novalidate="novalidate">
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Name</label>
@@ -280,7 +283,7 @@
             <div class="form-group">
               <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
 
@@ -355,7 +358,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Helius - DBS Bank is the one of the client</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -367,7 +370,8 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/projects_page-0051.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-2">I have involved in developing Hybrid Mobile Application for IOS Devices like IPAD using AngularJS, Ionic, HTML5, SASS, and CSS3.</p>
+                <p class="mb-2">I have involved in interacting with business team to get the requirements as Specs / Narratives to develop workable HTML screens.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -394,7 +398,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Helius => DBS Bank </h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -406,7 +410,8 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/projects_page-0052.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-2">I have involved in developing Hybrid Mobile Application for IOS Devices like IPAD using AngularJS, Ionic, HTML5, SASS, and CSS3.</p>
+                <p class="mb-2">I have involved in interacting with business team to get the requirements as Specs / Narratives to develop workable HTML screens.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -433,7 +438,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">IVY Comptech Pvt. Ltd</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -445,7 +450,8 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/projects_page-0071.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-2">Involved in Request analysis discussions and design the UI and also involved in developing HTML5 based Responsive web applications.</p>
+                <p class="mb-2">Writing valid HTML and CSS , JavaScript while developing workable layouts.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -472,7 +478,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Controller</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Oxygen Networks</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -484,7 +490,11 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/projects_page-0037.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-2 mx-left">Oxygen Networks is a subsidiary of Financial Oxygen Inc., USA. It is a world-class provider of capital markets technology and trading marketplaces.</p>
+                <p class="mb-2 mx-left">I have been involved in creating forms, fetching Data from back-end and displaying dynamic data as per the requirement, validating and submitting the form details to back-end. 
+                  <br /> I have involved in fixing bugs, runtime JS errors and Validating JavaScript. 
+                  <br /> Validating HTML, XHTML and CSS code with w3c validator. 
+                  <br /> The Bugs raised by testing team, Debugging and resolve the issues on priority.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -511,7 +521,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Locked Safe</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Oxygen Networks</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -523,7 +533,11 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/projects_page-0001.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-2 mx-left">Oxygen Networks is a subsidiary of Financial Oxygen Inc., USA. It is a world-class provider of capital markets technology and trading marketplaces.</p>
+                <p class="mb-2 mx-left">I have been involved in creating forms, fetching Data from back-end and displaying dynamic data as per the requirement, validating and submitting the form details to back-end. 
+                  <br /> I have involved in fixing bugs, runtime JS errors and Validating JavaScript. 
+                  <br /> Validating HTML, XHTML and CSS code with w3c validator. 
+                  <br /> The Bugs raised by testing team, Debugging and resolve the issues on priority.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -550,7 +564,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Submarine</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Oxygen Networks</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -562,7 +576,11 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/projects_page-0015.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-2 mx-left">Oxygen Networks is a subsidiary of Financial Oxygen Inc., USA. It is a world-class provider of capital markets technology and trading marketplaces.</p>
+                <p class="mb-2 mx-left">I have been involved in creating forms, fetching Data from back-end and displaying dynamic data as per the requirement, validating and submitting the form details to back-end. 
+                  <br /> I have involved in fixing bugs, runtime JS errors and Validating JavaScript. 
+                  <br /> Validating HTML, XHTML and CSS code with w3c validator. 
+                  <br /> The Bugs raised by testing team, Debugging and resolve the issues on priority.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
