--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/projects_page-0037.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-2 mx-left">Oxygen Networks is a subsidiary of Financial Oxygen Inc., USA. It is a world-class provider of capital markets technology and trading marketplaces.</p>
-                <p class="mb-2 mx-left">I have been involved in creating forms, fetching Data from back-end and displaying dynamic data as per the requirement, validating and submitting the form details to back-end. 
+                <p class="mb-2 mx-left text-left">Oxygen Networks is a subsidiary of Financial Oxygen Inc., USA. It is a world-class provider of capital markets technology and trading marketplaces.</p>
+                <p class="mb-2 mx-left text-left">I have been involved in creating forms, fetching Data from back-end and displaying dynamic data as per the requirement, validating and submitting the form details to back-end. 
                   <br /> I have involved in fixing bugs, runtime JS errors and Validating JavaScript. 
                   <br /> Validating HTML, XHTML and CSS code with w3c validator. 
                   <br /> The Bugs raised by testing team, Debugging and resolve the issues on priority.</p>
@@ -533,8 +533,8 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/projects_page-0001.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-2 mx-left">Oxygen Networks is a subsidiary of Financial Oxygen Inc., USA. It is a world-class provider of capital markets technology and trading marketplaces.</p>
-                <p class="mb-2 mx-left">I have been involved in creating forms, fetching Data from back-end and displaying dynamic data as per the requirement, validating and submitting the form details to back-end. 
+                <p class="mb-2 mx-left text-left">Oxygen Networks is a subsidiary of Financial Oxygen Inc., USA. It is a world-class provider of capital markets technology and trading marketplaces.</p>
+                <p class="mb-2 mx-left text-left">I have been involved in creating forms, fetching Data from back-end and displaying dynamic data as per the requirement, validating and submitting the form details to back-end. 
                   <br /> I have involved in fixing bugs, runtime JS errors and Validating JavaScript. 
                   <br /> Validating HTML, XHTML and CSS code with w3c validator. 
                   <br /> The Bugs raised by testing team, Debugging and resolve the issues on priority.</p>
@@ -576,8 +576,8 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/projects_page-0015.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-2 mx-left">Oxygen Networks is a subsidiary of Financial Oxygen Inc., USA. It is a world-class provider of capital markets technology and trading marketplaces.</p>
-                <p class="mb-2 mx-left">I have been involved in creating forms, fetching Data from back-end and displaying dynamic data as per the requirement, validating and submitting the form details to back-end. 
+                <p class="mb-2 mx-left text-left">Oxygen Networks is a subsidiary of Financial Oxygen Inc., USA. It is a world-class provider of capital markets technology and trading marketplaces.</p>
+                <p class="mb-2 mx-left text-left">I have been involved in creating forms, fetching Data from back-end and displaying dynamic data as per the requirement, validating and submitting the form details to back-end. 
                   <br /> I have involved in fixing bugs, runtime JS errors and Validating JavaScript. 
                   <br /> Validating HTML, XHTML and CSS code with w3c validator. 
                   <br /> The Bugs raised by testing team, Debugging and resolve the issues on priority.</p>
