--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <a class="btn btn-outline-light btn-social mx-1" href="https://in.linkedin.com/in/ravi-chida-617907129">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
+          <a class="btn btn-outline-light btn-social mx-1" href="https://www.ravichida.in/">
             <i class="fab fa-fw fa-dribbble"></i>
           </a>
         </div>
