Front-End Developer

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">UI Designer - UI Developer</p>
+      <!-- <p class="masthead-subheading font-weight-light mb-0">UI Designer - UI Developer</p> -->
+      <p class="masthead-subheading font-weight-light mb-0">Front-End Developer</p>
 
     </div>
   </header>
