--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <!-- Masthead Subheading -->
       <!-- <p class="masthead-subheading font-weight-light mb-0">UI Designer - UI Developer</p> -->
-      <p class="masthead-subheading font-weight-light mb-0">Front-End Developer</p>
+      <p class="masthead-subheading font-weight-light mb-0">Front End Developer</p>
 
     </div>
   </header>
