--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
   <link href="css/ravichida.css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 </head>
 
 <body id="page-top">
@@ -378,8 +379,19 @@
 
         <!-- Footer About Text -->
         <div class="col-lg-4">
-          <h4 class="text-uppercase mb-4">About Freelancer</h4>
-          <p class="lead mb-0">As a Freelancer you will have time and freedom to work</p>
+          <h4 class="text-uppercase mb-4">Contact Me</h4>
+          <!-- <form action="https://formspree.io/ravi.chanti@gmail.com" method="POST"> -->
+          <form method="POST">
+            <div class="form-group">
+              <label for="name">Name: </label>
+              <input type="text" name="name" class="form-control" placeholder="Enter Name" id="name">
+            </div>
+            <div class="form-group">
+              <label for="email">Email: </label>
+              <input type="email" name="email" class="form-control" placeholder="Enter Email" id="email">
+            </div>
+            <input type="submit" value="Send">
+          </form>
         </div>
 
       </div>
@@ -389,7 +401,7 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>©2020 RaviChida.in. All Rights Reserved.</small>
+      <small>©2021 RaviChida.in. All Rights Reserved.</small>
     </div>
   </section>
 
