--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container-fluid">
 
       <!-- Portfolio Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"><a class="text-secondary" href="projects.pdf" alt="Download Portfolio">Portfolio</a></h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom">
