PORTFOLIO titles size change and some code fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <title>Ravi Kumar Chida - Portfolio</title>
     <!-- Custom fonts for this theme -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link href="fontawesome/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <!-- Theme CSS -->
@@ -81,7 +81,7 @@
         <div class="container-fluid">
 
             <!-- Portfolio Section Heading -->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"><a class="text-secondary" href="projects.pdf" alt="Download Portfolio">Portfolio</a></h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"><a class="text-secondary" href="projects.pdf">Portfolio</a></h2>
 
             <!-- Icon Divider -->
             <div class="divider-custom">
@@ -169,7 +169,7 @@
 
             </div>
             <!-- /.row -->
-            <div class="portfolioMore text-center"><a href="projects.pdf">more portfolio pages...</a></div>
+            <div class="portfolioMore text-center"><a href="projects.pdf">more</a></div>
         </div>
     </section>
 
@@ -273,16 +273,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- About Section Button -->
-        <!-- <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
-          <i class="fas fa-download mr-2"></i>
-          Free Download!
-        </a>
-      </div> -->
-
-        </div>
     </section>
 
     <!-- Contact Section -->
@@ -355,25 +345,25 @@
             <div class="row">
 
                 <!-- Footer Location -->
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-lg-6 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Location</h4>
                     <p class="lead mb-0">Ravi Kumar Chida, Flat No 402, Raghavendra Nilayam, <br />Plot No: 212A, Street No 10,
                         <br />Addagutta, Western Hills, Kukatpally<br /> HYDERABAD, TELANGANA 500085</p>
                 </div>
 
                 <!-- Footer Social Icons -->
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-lg-6 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/ravi.chida">
                         <i class="fab fa-fw fa-facebook-f"></i>
                     </a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/login">
+                    <a class="btn btn-outline-light btn-social mx-1" href="#">
                         <i class="fab fa-fw fa-twitter"></i>
                     </a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://in.linkedin.com/in/ravi-chida-617907129">
                         <i class="fab fa-fw fa-linkedin-in"></i>
                     </a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.ravichida.in/">
+                    <a class="btn btn-outline-light btn-social mx-1" href="#">
                         <i class="fab fa-fw fa-dribbble"></i>
                     </a>
                 </div>
@@ -414,7 +404,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Helius - DBS Bank is the one of the client
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Helius - DBS Bank
                                 </h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
