--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="row">
                 <div class="col-lg-6 ml-auto">
                     <h4>Experience</h4>
-                    <table class="table table-striped" id="exp">
+                    <table class="table table-striped exp" id="exp">
                         <thead>
                             <tr>
                                 <th>Company Name</th>
@@ -257,14 +257,14 @@
 
                 </div>
                 <div class="col-lg-6 mr-auto">
-                    <h4>Technical Skills</h4>
+                    <h4 class="technical-skills">Technical Skills</h4>
                     <ul>
-                        <li class="lead">Web & Mobile Development – Using HTML5, CSS3, JavaScript, jQuery, React (reactjs).</li>
+                        <li class="lead">Web & Mobile Development – Using HTML5, CSS3, Bootstrap.</li>
                         <li class="lead">Front-end frameworks for developing responsive, mobile-first websites – Bootstrap and CSS, SASS
                         </li>
                         <li class="lead">Responsive UI Development which supports Multi Device and Cross Browser Compatibility.
                         </li>
-                        <li class="lead">Well versed in ( HTML5 / CSS / SASS / JavaScript ) programming concepts.</li>
+                        <li class="lead">Well versed in ( HTML5 / CSS / SASS / Bootstrap ) programming concepts.</li>
                         <li class="lead">Unit testing thoroughly and check whether the functionality working properly or not, testing with mock data / SIT & UAT.</li>
                         <li class="lead">Fixing runtime errors if any</li>
                         <li class="lead">Fixing the Bugs raised by testing team, debugging and resolving the issues on priority</li>
