added contact me

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
                 </div>
                 <div class="col-lg-6 mr-auto">
-                    <h4 class="technical-skills">Technical Skills </h4>
+                    <h4 class="technical-skills">Technical Skills</h4>
                     <ul>
                         <li class="lead">Web & Mobile Development – Using HTML5, CSS3, Bootstrap.</li>
                         <li class="lead">Front-end frameworks for developing responsive, mobile-first websites – Bootstrap and CSS, SASS
@@ -281,14 +281,14 @@
             <div class="row">
 
                 <!-- Footer Location -->
-                <div class="col-lg-6 mb-5 mb-lg-0">
+                <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Location</h4>
                     <p class="lead mb-0">Ravi Kumar Chida, Flat No 402, Raghavendra Nilayam, <br />Plot No: 212A, Street No 10,
                         <br />Addagutta, Western Hills, Kukatpally<br /> HYDERABAD, TELANGANA 500085</p>
                 </div>
 
                 <!-- Footer Social Icons -->
-                <div class="col-lg-6 mb-5 mb-lg-0">
+                <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/ravi.chida">
                         <i class="fab fa-fw fa-facebook-f"></i>
@@ -305,6 +305,22 @@
                 </div>
 
                 <!-- Footer About Text -->
+                <div class="col-lg-4">
+                    <h4 class="text-uppercase mb-4">Contact Me</h4>
+                    <!-- <form action="https://formspree.io/ravi.chanti@gmail.com" method="POST"> -->
+                    <form method="POST">
+                        <div class="form-group">
+                            <label for="name">Name: Chida Ravi Kumar</label>
+                            <!--<input type="text" name="name" class="form-control" placeholder="Enter Name" id="name">-->
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Mobile: 9848732211</label>
+                            <!--<label for="email">Email: </label>
+                            <input type="email" name="email" class="form-control" placeholder="Enter Email" id="email">-->
+                        </div>
+                        <!--<input type="submit" value="Send">-->
+                    </form>
+                </div>
 
             </div>
         </div>
