--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
             <!-- About Section Content -->
             <div class="row">
-                <div class="col-lg-6 ml-auto">
+                <div class="col-lg-6 col-md-12 col-sm-12 ml-auto">
                     <h4>Experience</h4>
                     <table class="table table-striped exp" id="exp">
                         <thead>
@@ -204,8 +204,23 @@
                         <tbody>
                             <tr>
                                 <td>Freelancer</td>
+                                <td>Lead Software Engineer</td>
+                                <td>Feb 2024 to Till Date</td>
+                            </tr>
+                            <tr>
+                                <td>Triviti Tech Private Limited</td>
+                                <td>Lead Software Engineer</td>
+                                <td>Oct 2023 to Jan 2024</td>
+                            </tr>
+                            <tr>
+                                <td>Nala Robotics LLP</td>
                                 <td>Sr. UI Developer</td>
-                                <td>May 2017 to Till Date</td>
+                                <td>May 2022 to June 2023</td>
+                            </tr>
+                            <tr>
+                                <td>Freelancer</td>
+                                <td>Sr. UI Developer</td>
+                                <td>May 2017 to May 2022</td>
                             </tr>
                             <tr>
                                 <td>Techmojo Pvt Ltd.</td>
@@ -256,7 +271,7 @@
                     </table>
 
                 </div>
-                <div class="col-lg-6 mr-auto">
+                <div class="col-lg-6 col-md-12 col-sm-12 mr-auto">
                     <h4 class="technical-skills">Technical Skills</h4>
                     <ul>
                         <li class="lead">Web & Mobile Development – Using HTML5, CSS3, Bootstrap.</li>
@@ -270,6 +285,33 @@
                         <li class="lead">Fixing the Bugs raised by testing team, debugging and resolving the issues on priority</li>
                         <li class="lead">Communicating with other teams / clients and providing status.</li>
                     </ul>
+                    <h4 class="technical-skills">Academic Details</h4>
+                    <table class="table table-striped exp" id="ad">
+                        <thead>
+                            <tr>
+                                <th>Course</th>
+                                <th>Proficiency</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>MCA</td>
+                                <td>IGNOU, New Delhi, India.</td>
+                            </tr>
+                            <tr>
+                                <td>BCA</td>
+                                <td>IGNOU, New Delhi, India.</td>
+                            </tr>
+                            <tr>
+                                <td>Diploma in Civil Engineering</td>
+                                <td>AP SBTET, </td>
+                            </tr>
+                            <tr>
+                                <td>SSC (10th)</td>
+                                <td>BSEAP, SRR College, Chilumuru</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -281,14 +323,14 @@
             <div class="row">
 
                 <!-- Footer Location -->
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-lg-4 col-md-12 col-sm-12 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Location</h4>
                     <p class="lead mb-0">Ravi Kumar Chida, Flat No 402, Raghavendra Nilayam, <br />Plot No: 212A, Street No 10,
                         <br />Addagutta, Western Hills, Kukatpally<br /> HYDERABAD, TELANGANA 500085</p>
                 </div>
 
                 <!-- Footer Social Icons -->
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-lg-4 col-md-12 col-sm-12 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/ravi.chida">
                         <i class="fab fa-fw fa-facebook-f"></i>
@@ -305,7 +347,7 @@
                 </div>
 
                 <!-- Footer About Text -->
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-12 col-sm-12" id="contact">
                     <h4 class="text-uppercase mb-4">Contact Me</h4>
                     <!-- <form action="https://formspree.io/ravi.chanti@gmail.com" method="POST"> -->
                     <form method="POST">
@@ -329,7 +371,7 @@
     <!-- Copyright Section -->
     <section class="copyright py-4 text-center text-white">
         <div class="container">
-            <small>©2022 RaviChida. All Rights Reserved.</small>
+            <small>©2024 RaviChida. All Rights Reserved.</small>
         </div>
     </section>
 
