--- a/index.html
+++ b/index.html
@@ -295,6 +295,10 @@
                         </thead>
                         <tbody>
                             <tr>
+                                <td>MBA</td>
+                                <td>Periyar University, Salem, India</td>
+                            </tr>
+                            <tr>
                                 <td>MCA</td>
                                 <td>IGNOU, New Delhi, India.</td>
                             </tr>
